--- a/src/data/explorer.glade
+++ b/src/data/explorer.glade
@@ -8,16 +8,39 @@
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
-  <object class="GtkAdjustment" id="YHeight">
-    <property name="upper">255</property>
-    <property name="value">127</property>
-    <property name="step_increment">1</property>
-    <property name="page_increment">10</property>
-  </object>
   <object class="GtkAdjustment" id="ZDepth">
     <property name="upper">255</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
+  </object>
+  <object class="GtkImage" id="image0">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="pixbuf">0_generic.png</property>
+  </object>
+  <object class="GtkImage" id="image1">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="pixbuf">1_stair.png</property>
+  </object>
+  <object class="GtkImage" id="image2">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="pixbuf">2_door.png</property>
+  </object>
+  <object class="GtkImage" id="image3">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="pixbuf">3_person.png</property>
+  </object>
+  <object class="GtkRadioButton" id="rdgroup">
+    <property name="label" translatable="yes">radiobuttongroup</property>
+    <property name="visible">True</property>
+    <property name="can_focus">True</property>
+    <property name="receives_default">False</property>
+    <property name="xalign">0</property>
+    <property name="active">True</property>
+    <property name="draw_indicator">True</property>
   </object>
   <object class="GtkWindow" id="HapticsExplorer">
     <property name="can_focus">False</property>
@@ -109,22 +132,22 @@
               <object class="GtkGrid" id="grid_1">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="orientation">vertical</property>
+                <property name="row_spacing">4</property>
                 <property name="row_homogeneous">True</property>
                 <property name="column_homogeneous">True</property>
                 <child>
-                  <object class="GtkScale" id="s_YHeight">
+                  <object class="GtkRadioButton" id="rd0">
+                    <property name="label" translatable="yes">Generic Object</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="halign">end</property>
-                    <property name="orientation">vertical</property>
-                    <property name="adjustment">YHeight</property>
-                    <property name="inverted">True</property>
-                    <property name="show_fill_level">True</property>
-                    <property name="restrict_to_fill_level">False</property>
-                    <property name="fill_level">100000</property>
-                    <property name="round_digits">0</property>
-                    <property name="digits">0</property>
-                    <property name="value_pos">left</property>
+                    <property name="receives_default">False</property>
+                    <property name="image">image0</property>
+                    <property name="xalign">0</property>
+                    <property name="always_show_image">True</property>
+                    <property name="active">True</property>
+                    <property name="draw_indicator">True</property>
+                    <property name="group">rdgroup</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -132,26 +155,64 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkLabel" id="l_y_height">
+                  <object class="GtkRadioButton" id="rd1">
+                    <property name="label" translatable="yes">Stair/Curb</property>
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="xpad">5</property>
-                    <property name="label">Y: Height</property>
-                    <property name="justify">center</property>
-                    <property name="angle">90</property>
-                    <property name="max_width_chars">7</property>
-                    <property name="track_visited_links">False</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">False</property>
+                    <property name="image">image1</property>
                     <property name="xalign">0</property>
+                    <property name="always_show_image">True</property>
+                    <property name="active">True</property>
+                    <property name="draw_indicator">True</property>
+                    <property name="group">rdgroup</property>
                   </object>
                   <packing>
-                    <property name="left_attach">1</property>
-                    <property name="top_attach">0</property>
+                    <property name="left_attach">0</property>
+                    <property name="top_attach">1</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkRadioButton" id="rd2">
+                    <property name="label" translatable="yes">Door</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">False</property>
+                    <property name="image">image2</property>
+                    <property name="xalign">0</property>
+                    <property name="always_show_image">True</property>
+                    <property name="active">True</property>
+                    <property name="draw_indicator">True</property>
+                    <property name="group">rdgroup</property>
+                  </object>
+                  <packing>
+                    <property name="left_attach">0</property>
+                    <property name="top_attach">2</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkRadioButton" id="rd3">
+                    <property name="label" translatable="yes">Person</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">False</property>
+                    <property name="image">image3</property>
+                    <property name="xalign">0</property>
+                    <property name="always_show_image">True</property>
+                    <property name="active">True</property>
+                    <property name="draw_indicator">True</property>
+                    <property name="group">rdgroup</property>
+                  </object>
+                  <packing>
+                    <property name="left_attach">0</property>
+                    <property name="top_attach">3</property>
                   </packing>
                 </child>
               </object>
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
+                <property name="padding">16</property>
                 <property name="position">1</property>
               </packing>
             </child>
